--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon -r dotenv/config bin/www.js"
     },
     "author": "HubSpot Academy learner",
     "license": "ISC",
     "dependencies": {
         "axios": "^1.3.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
+        "nodemon": "^3.1.9",
         "pug": "^3.0.2"
     }
 }
